--- a/src/app/home/expense-table/expense-table.component.html
+++ b/src/app/home/expense-table/expense-table.component.html
@@ -71,3 +71,13 @@
         </div>
     </div>
 </div>
+
+<div aria-live="polite" aria-atomic="true">
+    <div class="toast-postion">
+        <div class="toast" id="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-body">
+                {{message}}
+            </div>
+        </div>
+    </div>
+</div>
