--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -51,10 +51,14 @@
             </div>
         </div>
     </div>
+</div>
 
-    <div class="toast" id="element" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-body">
-            {{message}}
+<div aria-live="polite" aria-atomic="true">
+    <div class="toast-postion">
+        <div class="toast" id="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-body">
+                {{message}}
+            </div>
         </div>
     </div>
 </div>
